change: install pulledpork

--- a/ansible/ELK6/playbooks/ELK6_grafana.yml
+++ b/ansible/ELK6/playbooks/ELK6_grafana.yml
@@ -44,6 +44,9 @@
     - name: compile snort
       script: scripts/compile_snort.sh
       become: yes
+    - name: install pulledpork
+      script: scripts/install_pulledpork.sh
+      become: yes
     - name: mkdir
       file: path={{ item }}  state=directory mode=0755
       with_items:
