--- a/ansible/ELK6/playbooks/config.yml
+++ b/ansible/ELK6/playbooks/config.yml
@@ -5,3 +5,4 @@ kibana_elasticsearch_requestTimeout: 300000
 elasticsearch_thread_pool_search_queue_size: 100000
 elasticsearch_total_heap_space: -Xms2g
 elasticsearch_maximum_heap_space: -Xmx2g
+snort_home_net: 10.0.0.0/24
