--- a/ansible/ELK6/playbooks/roles/elasticsearch-curator/tasks/main.yml
+++ b/ansible/ELK6/playbooks/roles/elasticsearch-curator/tasks/main.yml
@@ -2,7 +2,10 @@
   copy: src=files/curator.list dest=/etc/apt/sources.list.d/curator.list
   become: yes
 - name: install elasticsearch-curator
-  apt: pkg={{ item }} update_cache=yes
-  become: yes
+    name: "{{ packages }}"
+    update_cache: yes
+  vars:
+    packages:
   with_items:
     - elasticsearch-curator
+  become: yes
