--- a/ansible/ELK6/playbooks/roles/elasticsearch-curator/tasks/main.yml
+++ b/ansible/ELK6/playbooks/roles/elasticsearch-curator/tasks/main.yml
@@ -2,6 +2,7 @@
   copy: src=files/curator.list dest=/etc/apt/sources.list.d/curator.list
   become: yes
 - name: install elasticsearch-curator
+  apt:
     name: "{{ packages }}"
     update_cache: yes
   vars:
