--- a/ansible/ELK6/playbooks/roles/snort/tasks/main.yml
+++ b/ansible/ELK6/playbooks/roles/snort/tasks/main.yml
@@ -158,3 +158,7 @@
     block: |
       include $RULE_PATH/snort.rules
   become: yes
+- name: copy systemd startup script
+  copy: src=files/snort.service  dest=/lib/systemd/system/snort.service
+  become: yes
+  notify: restart snort
