change: change path and add grok and date

--- a/ansible/ELK6/playbooks/roles/logstash/files/logstash_snort_csv.conf
+++ b/ansible/ELK6/playbooks/roles/logstash/files/logstash_snort_csv.conf
@@ -1,16 +1,24 @@
 input {
     file {
         type => "snort"
-        path => ["/var/log/snort/alert.csv"]
+        path => ["/var/log/snort/alert.csv.[0-9]+"]
     }
 }
 
 filter {
     if ([type] == "snort") {
+        grok {
+            match => ["path", "(?<index>snort.csv.\d{10})\$" ]
+        }
         csv {
             columns => ["timestamp","sig_generator","sig_id","sig_rev","msg","proto","src","srcport","dst","dstport","ethsrc","ethdst","ethlen","tcpflags","tcpseq","tcpack","tcplen","tcpwindow","ttl","tos","id","dgmlen","iplen","icmptype","icmpcode","icmpid","icmpseq"] 
 	    separator => ","
 	}
+        date {
+            locale => "en"
+            match => ["timestamp", "MM/dd-HH:mm:ss.SSSSSS"]
+            target => "@timestamp"
+        }
     }
 }
 
