change: convert interger (gid, sid, rid) and index => "snort.%{+YYYYMMdd}"

--- a/ansible/ELK6/playbooks/roles/logstash/files/logstash_snort.conf
+++ b/ansible/ELK6/playbooks/roles/logstash/files/logstash_snort.conf
@@ -17,6 +17,9 @@ filter {
             target => "@timestamp"
         }
         mutate {
+            convert => [ "gid", "integer" ]
+            convert => [ "sid", "integer" ]
+            convert => [ "rid", "integer" ]
             convert => [ "SrcPort", "integer" ]
             convert => [ "DstPort", "integer" ]
             convert => [ "priority", "integer" ]
@@ -29,7 +32,7 @@ output {
     if ([type] == "snort") {
         elasticsearch {
             hosts => ["localhost:9200"]
-            index => "snort-%{+YYYYMMdd}"
+            index => "snort.%{+YYYYMMdd}"
         }
     }
 }
