change: add add_field

--- a/ansible/ELK6/playbooks/roles/logstash/files/logstash_snort.conf
+++ b/ansible/ELK6/playbooks/roles/logstash/files/logstash_snort.conf
@@ -17,6 +17,13 @@ filter {
             target => "@timestamp"
         }
         mutate {
+            add_field => { "gid_sid_rid" => "%{gid}:%{sid}:%{rid}" }
+            add_field => { "SrcIp_SrcPort" => "%{SrcIp}:%{SrcPort}" }
+            add_field => { "DstIp_DstPort" => "%{DstIp}:%{DstPort}" }
+            add_field => { "SrcIp_SrcPort_DstIp_DstPort" => "%{SrcIp}:%{SrcPort} - %{DstIp}:%{DstPort}" }
+            add_field => { "SrcIp_DstIp" => "%{SrcIp} - %{DstIp}" }
+	}
+        mutate {
             convert => [ "gid", "integer" ]
             convert => [ "sid", "integer" ]
             convert => [ "rid", "integer" ]
