change: edit /etc/crontab (dummy)

--- a/ansible/ELK6/playbooks/roles/snort/tasks/main.yml
+++ b/ansible/ELK6/playbooks/roles/snort/tasks/main.yml
@@ -157,6 +157,12 @@
       include $RULE_PATH/snort.rules
       output alert_fast: /var/log/snort/alert.log
   become: yes
+#- name: set crontab
+#  blockinfile:
+#    dest: /etc/crontab
+#    insertafter: EOF
+#    block: |
+#      ##
 - name: copy systemd startup script
   copy: src=files/snort.service  dest=/lib/systemd/system/snort.service
   become: yes
