--- a/ansible/ELK6/playbooks/roles/snort/tasks/main.yml
+++ b/ansible/ELK6/playbooks/roles/snort/tasks/main.yml
@@ -157,12 +157,12 @@
       include $RULE_PATH/snort.rules
       output alert_fast: /var/log/snort/alert.log
   become: yes
-#- name: set crontab
-#  blockinfile:
-#    dest: /etc/crontab
-#    insertafter: EOF
-#    block: |
-#      ##
+- name: set crontab
+  blockinfile:
+    dest: /etc/crontab
+    insertafter: EOF
+    block: |
+      10 2    * * *   root   /usr/local/bin/pulledpork.sh && [ -e /var/log/snort/snort/snort_enp0s8.pid ] && kill -HUP `cat  /var/log/snort/snort_enp0s8.pid`
 - name: copy systemd startup script
   copy: src=files/snort.service  dest=/lib/systemd/system/snort.service
   become: yes
