--- a/ansible/ELK6/playbooks/ELK6_grafana.yml
+++ b/ansible/ELK6/playbooks/ELK6_grafana.yml
@@ -18,6 +18,7 @@
         update_cache: yes
       vars:
         packages:
+        - build-essential
         - ntp
         - git
         - curl
